kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sampleapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: internal-sampleapp-ergonomics
            port:
              number: 80
  ingressClassName: nginx
